trunk/Archive2/bb/192e1f99fdd3c7/output
main.cpp:11:28: error: expected ';' before '<' token
     using Base<Ts...>::Base<int>;
                            ^
main.cpp:11:28: error: expected unqualified-id before '<' token
